[package]
name = "images-proxy"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.63"
url = "2.3.1"
reqwest = "0.11.18"
anyhow = "1.0.71"
fast_image_resize = "3.0.1"
regex = "1.8.3"

image = { version = "0.24.6", default-features = false, features = [
  "jpeg",
  "png",
  "webp",
] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 2
