[package]
name = "images-proxy"
version = "0.1.5"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.69"
url = "2.5.0"
reqwest = "0.12.3"
anyhow = "1.0.81"
fast_image_resize = "3.0.4"
regex = "1.10.4"

image = { version = "0.25.1", default-features = false, features = [
  "jpeg",
  "png",
  "webp",
] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 2
